--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(gaden_gui)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_BUILD_TYPE "Debug")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -g -fno-omit-frame-pointer")
-set(CMAKE_CXX_FLAGS_DEBUG "-glldb -O0")
+set(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
 
 include(FetchContent)
 set(FETCHCONTENT_QUIET FALSE)
